# fastApiStock

./: .dockerignore  Dockerfile  README.md  backup.travis.yml  docker-compose.traefik copy.yml  docker-compose.traefik.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
app/: main.py
infra/: index.ts
