[tool.poetry]
name = "ts-pred-app"
version = "0.1.0"
description = "Docker image with Uvicorn managed by Gunicorn for high-performance Starlette timer series prediction web applications in Python 3.8 with performance auto-tuning. Optionally with Alpine Linux."
authors = ["Henrik E based on app framework of Sebastián Ramírez <tiangolo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
docker = "^4.2.0"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"
autoflake = "^1.3.1"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
